--- a/testApp/angular.json
+++ b/testApp/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "hw2": {
+    "testApp": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/hw2",
+            "outputPath": "dist/testApp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "hw2:build"
+            "browserTarget": "testApp:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "hw2:build:production"
+              "browserTarget": "testApp:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "hw2:build"
+            "browserTarget": "testApp:build"
           }
         },
         "test": {
@@ -115,15 +115,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "hw2:serve"
+            "devServerTarget": "testApp:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "hw2:serve:production"
+              "devServerTarget": "testApp:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "hw2"
+  "defaultProject": "testApp"
 }
