--- a/testApp/package.json
+++ b/testApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hw2",
+  "name": "test-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,8 +20,6 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
-    "express": "^4.17.1",
-    "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -50,5 +48,6 @@
   "engines": {
     "node": "~12.9.1",
     "npm": "~6.10.2"
-  }  
+    }
+  
 }
